# hackaton-backend

./: .gitignore  Untitled.ipynb  main.py  pyproject.toml  requirements.txt  result.csv  server.py
